/*
 * Copyright 2023 Accenture Global Solutions Limited
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
package tracdap.api;

option java_package = "org.finos.tracdap.api";
option java_multiple_files = true;

import "google/api/annotations.proto";


service TracAuthApi {

  rpc webAuthRequest(WebAuthRequest) returns (WebAuthResponse) {
    option (google.api.http) = {
      get: "/auth-request-web"
    };
  }

  rpc webAuthContent(WebAuthRequest) returns (WebAuthResponse) {
    option (google.api.http) = {
      get: "/auth-request-web"
    };
  }

//
//
//  rpc apiAuthRequest(ApiAuthRequest) returns (ApiAuthResponse) {
//    option (google.api.http) = {
//      get: "/auth-request-web"
//    };
//  }


}


enum AuthResultCode {
  AUTH_RESULT_NOT_SET = 0;
  SUCCESS = 1;
  FAILURE = 2;
  HTTP_RESPONSE = 3;
  NEED_CONTENT = 4;
}

message AuthResult {

  AuthResultCode code = 1;
  string message = 2;
  string token = 3;
}


message WebAuthRequest {

  string method = 1;
  string uri = 2;
  map<string, string> headers = 3;
  optional bytes content = 4;
}

message WebAuthResponse {

  int32 statusCode = 1;
  string statusMessage = 2;
  map<string, string> headers = 3;
  optional bytes content = 4;
}
